--- a/index.html
+++ b/index.html
@@ -408,6 +408,12 @@
                 class="btn btn-primary m-3"
                 >Clean Cart</a
               >
+              <a
+                href="javascript:void(0)"
+                onclick="generateCart()"
+                class="btn btn-primary m-3"
+                >My Cart</a
+              >
             </div>
           </div>
         </div>
