--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@
     ></script>
 
     <!-- Core theme JS-->
+    <script src="js/products.js"></script>
     <script src="js/shop.js"></script>
     <script src="js/checkout.js"></script>
   </body>
