--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
       </div>
     </footer>
 
+    <!-- Modal Cart -->
     <div
       class="modal fade"
       id="cartModal"
@@ -373,32 +374,14 @@
                   <th scope="col">Product</th>
                   <th scope="col">Price</th>
                   <th scope="col">Qty.</th>
-                  <th scope="col">Total <small>(with discount)</small></th>
+                  <th scope="col">Subtotal</th>
+                  <th scope="col">Subtotal <small>(with discount)</small></th>
                 </tr>
               </thead>
-              <tbody id="cart_list">
-                <tr>
-                  <th scope="row">Cooking oil</th>
-                  <td>$10.5</td>
-                  <td>2</td>
-                  <td>$21</td>
-                </tr>
-                <tr>
-                  <th scope="row">Pasta</th>
-                  <td>$6.25</td>
-                  <td>1</td>
-                  <td>$6.25</td>
-                </tr>
-                <tr>
-                  <th scope="row">Lawn dress</th>
-                  <td>$15</td>
-                  <td>3</td>
-                  <td>$45</td>
-                </tr>
-              </tbody>
+              <tbody id="cart_list"></tbody>
             </table>
             <div class="text-center fs-3">
-              Total: $<span id="total_price">100</span>
+              Total: $<span id="total_price"></span>
             </div>
             <div class="text-center">
               <a href="checkout.html" class="btn btn-primary m-3">Checkout</a>
@@ -408,13 +391,14 @@
                 class="btn btn-primary m-3"
                 >Clean Cart</a
               >
-              <a
-                href="javascript:void(0)"
+              <!-- Exercice 4 button 
+
+                <a href="javascript:void(0)"
                 onclick="generateCart()"
                 class="btn btn-primary m-3"
                 >My Cart</a
               >
-            </div>
+            --></div>
           </div>
         </div>
       </div>
